--- a/readme
+++ b/readme
@@ -1,1 +1,108 @@
-ARMBIAN TVBOX M10
+
+# AvCase - Assistente de Voz Caseiro
+
+O **AvCase** é um assistente de voz caseiro totalmente offline e seguro, projetado para funcionar em dispositivos baseados no sistema **Armbian**. Ele combina funcionalidades modernas de automação doméstica com interfaces flexíveis de controle, proporcionando conveniência, privacidade e segurança.
+
+---
+
+## **Características Principais**
+- **Totalmente Offline**: Garantia de segurança e privacidade ao executar comandos sem conexão com a internet.
+- **Integração com a Web (Opcional)**: Quando conectado à internet, o AvCase utiliza uma Assistente de IA para funções avançadas, conexão com o youtube e com a internet.
+- **Comandos de Voz**: Controle dispositivos e execute tarefas por meio de comandos de voz.
+- **Controle Remoto**: Suporte a comandos remotos, seja via hardware dedicado ou interfaces web.
+- **Interface Web**: Controle completo através de uma interface web amigável.
+- **Toca Música**: Reprodução de músicas diretamente do YouTube ou localmente.
+- **Wi-Fi e Microfones Sem Fio**: Conexão via Wi-Fi e suporte a microfones sem fio para maior liberdade.
+- **Suporte a Comandos Linux**: Permite a execução de comandos Linux diretamente no dispositivo.
+- **Compatível com TVs**: Pode ser conectado a uma TV para exibição de informações ou controle multimídia.
+
+---
+
+## **Requisitos de Hardware**
+- **Qualquer TV BOX que aceite o Armbian**.
+- **Microfone**: Suporte para microfones com fio, sem fio.
+- **Wi-Fi**: Para ativar e desativar despositivos e para acessar musicas.
+- **TV ou Monitor**: (opcional) para saída visual (futuro).
+
+---
+
+## **Recursos e Funcionalidades**
+### 1. **Automação Offline**
+- Controle luzes, tomadas, ar condionado, janelas, TV, ventiladores e outros dispositivos com comandos pré-programados.
+- Total funcionalidade sem necessidade de conexão à internet.
+
+### 2. **Comandos de Controle**
+- Reconhece e executa comandos de voz como:
+  - "CASA Ligar luz da sala."
+  - "RADIO melhor do rock nacional (via web YouTube)."
+  - "CASA Desligar TV."
+- Suporte a comandos Linux para maior flexibilidade e controle do sistema (DEV).
+
+### 3. **Modo Online**
+- Ao se conectar à internet, o AvCase integra funcionalidades baseadas em IA, incluindo:
+  - Respostas inteligentes.
+  - Recomendações personalizadas.
+  - "ASSISTENTE o que é microfone?"
+  - "ASSISTENTE o que é globalização"
+
+### 4. **Interface Web**
+- Uma interface web amigável para controle e configuração do sistema.
+- Acesse remotamente pelo navegador em qualquer dispositivo na mesma rede.
+- configurações gerais, ou seleção de musicas. 
+
+### 5. **Reprodução Multimídia**
+- Integração com o YouTube para reprodução de músicas e vídeos diretamente pelo sistema.
+
+---
+
+## **Como Instalar**
+1. **Instalar o Armbian**
+   - Configure o Armbian em seu dispositivo.
+   - Certifique-se de ter acesso root para instalação dos componentes.
+
+2. **Baixar o AvCase**
+   - Clone o repositório do AvCase dentro do TVBOX via ssh:
+     ```bash
+     git clone https://github.com/Condiolov/AvCase-Assistente-de-Voz-Caseiro.git
+#      cd avcase
+     ```
+
+     
+3. **Instalar Dependências (falta fazer)**
+   - Execute o script de instalação:
+     ```bash
+     bash install.sh 
+     ```
+
+4. **Configurar o Sistema**
+   - Conecte microfones e dispositivos adicionais.
+   - Configure sua rede Wi-Fi para o AvCase.
+
+---
+
+## **Comandos de Uso**
+- Para iniciar o assistente:
+  ```bash
+  ./avcase start
+  ```
+- Acesse a interface web:
+  - Abra o navegador e vá para: `http://seu_dispositivo:8080`.
+
+---
+
+## **Contribuições**
+O AvCase é um projeto **open-source**, e contribuições são sempre bem-vindas!
+- Relate problemas no nosso [sistema de issues](https://github.com/Condiolov/AvCase-Assistente-de-Voz-Caseiro/issues).
+- Envie PRs com melhorias ou novas funcionalidades.
+
+---
+
+## **História do Projeto**
+O AvCase começou do zero, com o objetivo de criar um assistente doméstico acessível e completamente offline. Hoje, ele evoluiu para uma solução robusta e multifuncional, combinando privacidade, automação e IA de forma integrada.
+
+---  
+## **Licença**
+Este projeto está licenciado sob a [MIT License](https://opensource.org/licenses/MIT).
+
+---  
+Desenvolvido com paixão pela comunidade para trazer tecnologia de ponta para sua casa. 🌟
